--- a/k8s/ns.yml
+++ b/k8s/ns.yml
@@ -1,7 +1,10 @@
+
+#java-build
+
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: go-demo-3-build
+  name: java-build
 
 ---
 
@@ -9,143 +12,89 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: build
-  namespace: go-demo-3-build
+  namespace: java-build
 
 ---
 
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: RoleBinding
-metadata:
-  name: build
-  namespace: go-demo-3-build
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: admin
-subjects:
-- kind: ServiceAccount
-  name: build
-
----
-
-apiVersion: v1
-kind: LimitRange
-metadata:
-  name: build
-  namespace: go-demo-3-build
-spec:
-  limits:
-  - default:
-      memory: 500Mi
-      cpu: 0.2
-    defaultRequest:
-      memory: 250Mi
-      cpu: 0.1
-    max:
-      memory: 500Mi
-      cpu: 0.5
-    min:
-      memory: 10Mi
-      cpu: 0.05
-    type: Container
-
----
-
-apiVersion: v1
-kind: ResourceQuota
-metadata:
-  name: build
-  namespace: go-demo-3-build
-spec:
-  hard:
-    requests.cpu: 2
-    requests.memory: 3Gi
-    limits.cpu: 3
-    limits.memory: 4Gi
-    pods: 15
-
----
-
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: go-demo-3
-
----
-
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: RoleBinding
-metadata:
-  name: build
-  namespace: go-demo-3
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: admin
-subjects:
-- kind: ServiceAccount
-  name: build
-  namespace: go-demo-3-build
-
----
-
-apiVersion: v1
-kind: LimitRange
-metadata:
-  name: build
-  namespace: go-demo-3
-spec:
-  limits:
-  - default:
-      memory: 200Mi
-      cpu: 0.2
-    defaultRequest:
-      memory: 100Mi
-      cpu: 0.1
-    max:
-      memory: 500Mi
-      cpu: 0.5
-    min:
-      memory: 10Mi
-      cpu: 0.05
-    type: Container
-
----
-
-apiVersion: v1
-kind: ResourceQuota
-metadata:
-  name: build
-  namespace: go-demo-3
-spec:
-  hard:
-    requests.cpu: 2
-    requests.memory: 3Gi
-    limits.cpu: 3
-    limits.memory: 4Gi
-    pods: 15
-
----
-
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: go-demo-3-jenkins
-
----
-
+# jenkins rolebinding
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: jenkins-role-binding
-  namespace: go-demo-3-build
+  name: java-jenkins-role-binding
+  namespace: java-build
   labels:
-    app: jenkins
+    app: java-jenkins
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
 - kind: ServiceAccount
-  name: go-demo-3-jenkins
-  namespace: go-demo-3-jenkins
+  name: java-jenkins
+  namespace: java-jenkins
+
+---
+#build rolebinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: RoleBinding
+metadata:
+  name: build
+  namespace: java-build
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: admin
+subjects:
+- kind: ServiceAccount
+  name: build
+
+---
+
+#java namespace
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: java
+
+---
+#build role binding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: RoleBinding
+metadata:
+  name: build
+  namespace: java
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: admin
+subjects:
+- kind: ServiceAccount
+  name: build
+  namespace: java-build
+
+---
+
+#java-jenkins
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: java-jenkins
+
+---
+# jenkins rolebinding
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: java-jenkins-role-binding
+  namespace: java-jenkins
+  labels:
+    app: java-jenkins
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+- kind: ServiceAccount
+  name: java-jenkins
+  namespace: java-jenkins
+
